--- a/HVAC_Site.ste/CSS/Stylesheet.css
+++ b/HVAC_Site.ste/CSS/Stylesheet.css
@@ -30,13 +30,11 @@ body 				{background:url(../Images/Backround/Tileable%20eroded%20scratch%20metal
 	
 #content			{ margin:20px auto 20px auto; padding-left:150px; padding-right:180px;}
 
-#topnav				{clear:both; font-size:14px; background:#00A400; background-repeat:repeat; border:1px solid #000;text-align: center; padding:0 0 0 15px;  }
-	#topnav ul			{
-	padding: 0px 0px; 
-	
-	text-align: center;
-	display:block;
-}
+#topnav				{clear:both; font-size:14px; background:#00A400; background-repeat:repeat; border:1px solid #000; padding:0 0 0 20px; width:959px; margin-left:-40px; }
+	#topnav ul			{text-align: center;display:block; margin:0 0 0 40px;}
+
+
+
 	#topnav ul li		{display:block; display:inline; list-style-type:none; padding:0 7.5px 0 7.5px; border:#000 1px }
 		 #topnav	a:link			{font-weight:bold; text-decoration:none; text-transform:uppercase; color:#333; }
 		#topnav a:visited		{font-weight:bold; text-decoration:none;color:#333; }
