--- a/HVAC_Site.ste/CSS/Stylesheet.css
+++ b/HVAC_Site.ste/CSS/Stylesheet.css
@@ -39,7 +39,7 @@ body 				{background:url(../Images/Backround/Tileable%20eroded%20scratch%20metal
 	
 #content			{ margin:20px auto 20px auto; padding-left:150px; padding-right:180px;}
 
-#topnav				{clear:both; font-size:14px; background:#00A400; background-repeat:repeat; border:1px solid #000; padding:0 0 0 20px; width:959px; margin-left:-40px; }
+#topnav				{clear:both; font-size:14px; background:#00A400; background-repeat:repeat; border:1px solid #000; padding:0 0 0 20px; width:959px; margin-left:-40px; background:#00A400; }
 	#topnav ul			{text-align: center;display:block; margin:0 0 0 40px;}
 
 
