--- a/HVAC_Site.ste/CSS/Stylesheet.css
+++ b/HVAC_Site.ste/CSS/Stylesheet.css
@@ -1,6 +1,14 @@
 #wrapper			{width:900px; margin:0px auto 0px auto; background-color:#fff; padding:0px 40px; border:#000 1px;}
 
 
+.number {
+  font-size: 72px;
+  background: -webkit-linear-gradient(#eee, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
 
 .sticky {
   position: -webkit-sticky; /* Safari */
