--- a/HVAC_Site.ste/CSS/Stylesheet.css
+++ b/HVAC_Site.ste/CSS/Stylesheet.css
@@ -1,6 +1,28 @@
 #wrapper			{width:900px; margin:0px auto 0px auto; background-color:#fff; padding:0px 40px; border:#000 1px;}
 
 
+
+.wpframe {
+background: #fff;
+border-radius: 2px;
+-webkit-border-radius: 2px;
+-moz-border-radius: 2px;
+padding: 8px;
+-webkit-box-shadow: 1px 2px 1px #d1d1d1;
+-moz-box-shadow: 1px 2px 1px #d1d1d1;
+box-shadow: 1px 2px 1px #d1d1d1;
+}
+
+
+
+
+
+
+
+
+
+
+
 .number { margin-top:-16px;
   font-size: 72px;
   background: -webkit-linear-gradient(#0F0, #090);
