--- a/HVAC_Site.ste/CSS/Stylesheet.css
+++ b/HVAC_Site.ste/CSS/Stylesheet.css
@@ -11,12 +11,13 @@ padding: 8px;
 -webkit-box-shadow: 1px 2px 1px #d1d1d1;
 -moz-box-shadow: 1px 2px 1px #d1d1d1;
 box-shadow: 1px 2px 1px #d1d1d1;
+margin-left:-16px;
 }
 
 
 
 
-#bump	{padding-left:-10px;}
+
 
 
 
